added new project in base

--- a/base/index.html
+++ b/base/index.html
@@ -16,6 +16,11 @@
       <li>
         <a href="https://adoring-ramanujan-26045d.netlify.app/">Signup Form</a>
       </li>
+      <li>
+        <a href="https://gracious-elion-7ffa5d.netlify.app/"
+          >base apparel coming soon (landing Page)</a
+        >
+      </li>
     </ul>
   </body>
 </html>
