add new project

--- a/base/index.html
+++ b/base/index.html
@@ -3,22 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Frontend Mentor Challenges</title>
   </head>
   <body>
     <h1>Frontend Mentor Challenges</h1>
     <ul>
       <li>
-        <a href="https://youthful-yonath-c5e0b2.netlify.app/"
+        <a href="https://youthful-yonath-c5e0b2.netlify.app/" target="_blank"
           >Four Card Feature</a
         >
       </li>
       <li>
-        <a href="https://adoring-ramanujan-26045d.netlify.app/">Signup Form</a>
+        <a href="https://adoring-ramanujan-26045d.netlify.app/" target="_blank"
+          >Signup Form</a
+        >
       </li>
       <li>
-        <a href="https://gracious-elion-7ffa5d.netlify.app/"
-          >base apparel coming soon (landing Page)</a
+        <a href="https://gracious-elion-7ffa5d.netlify.app/" target="_blank"
+          >Base apparel coming soon (landing Page)</a
+        >
+      </li>
+      <li>
+        <a href="https://stupefied-mayer-465a36.netlify.app/" target="_blank"
+          >Single price grid component</a
         >
       </li>
     </ul>
