--- a/index.html
+++ b/index.html
@@ -10,6 +10,33 @@
     <h1>Frontend Mentor Challenges</h1>
     <ul>
       <li>
+        <a href="../four-card-feature-section-master/index.html" target="_blank"
+          >Four Card Feature</a
+        >
+      </li>
+      <li>
+        <a
+          href="../intro-component-with-signup-form-master/index.html"
+          target="_blank"
+          >Signup Form</a
+        >
+      </li>
+      <li>
+        <a href="../base-apparel-coming-soon-master/index.html" target="_blank"
+          >Base apparel coming soon (landing Page)</a
+        >
+      </li>
+      <li>
+        <a
+          href="../single-price-grid-component-master/index.html"
+          target="_blank"
+          >Single price grid component</a
+        >
+      </li>
+    </ul>
+
+    <!-- <ul>
+      <li>
         <a href="https://youthful-yonath-c5e0b2.netlify.app/" target="_blank"
           >Four Card Feature</a
         >
@@ -29,6 +56,8 @@
           >Single price grid component</a
         >
       </li>
-    </ul>
+    </ul> -->
+
+    <script src="app.js"></script>
   </body>
 </html>
