--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Frontend Mentor Challenges</title>
   </head>
   <body>
-    <h1>Frontend Mentor Challenges so far</h1>
+    <h1>Frontend Mentor</h1>
     <ul>
       <li>
         <a href="../four-card-feature-section-master/index.html" target="_blank"
