customize base file

--- a/index.html
+++ b/index.html
@@ -3,37 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor Challenges</title>
   </head>
   <body>
-    <h1>Frontend Mentor</h1>
-    <ul>
-      <li>
-        <a href="../four-card-feature-section-master/index.html" target="_blank"
-          >Four Card Feature</a
-        >
-      </li>
-      <li>
-        <a
-          href="../intro-component-with-signup-form-master/index.html"
-          target="_blank"
-          >Signup Form</a
-        >
-      </li>
-      <li>
-        <a href="../base-apparel-coming-soon-master/index.html" target="_blank"
-          >Base apparel coming soon (landing Page)</a
-        >
-      </li>
-      <li>
-        <a
-          href="../single-price-grid-component-master/index.html"
-          target="_blank"
-          >Single price grid component</a
-        >
-      </li>
-    </ul>
+    <div class="container">
+      <h1 class="main-heading">Frontend Mentor Challenges</h1>
+      <h2>Projects:</h2>
+      <ul id="list"></ul>
+    </div>
+
+    <footer>
+      Created with by
+      <a href="https://twitter.com/mtc0750" target="_blank">Tanvir Chowdhury</a
+      >. Code on
+      <a
+        href="https://github.com/tanvirch0750/Frontend-Mentor-Challenges"
+        target="_blank"
+        >Github</a
+      >
+    </footer>
 
     <!-- <ul>
       <li>
