added new project

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <footer>
-      Created with by
+      Created by
       <a href="https://twitter.com/mtc0750" target="_blank">Tanvir Chowdhury</a
       >. Code on
       <a
